--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=0850080056@sv.hcmunre.edu.vn
+spring.mail.password=thanhy123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/quanlykhomaytinh
