--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.datasource.username=root
 spring.datasource.password=123456
-spring.datasource.url=jdbc:mysql://localhost:3306/quanlykhomaytinh
+spring.datasource.url=jdbc:mysql://localhost:3306/quanlyhocphan
