--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=0850080056@sv.hcmunre.edu.vn
-spring.mail.password=thanhy123
+spring.mail.username=xuandieu12300@gmail.com
+spring.mail.password=kbreqiitzakykgoi
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
